--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 4000
-LOCAL_URL = mongodb://0.0.0.0:27017/apiexpress
+LOCAL_URL = mongodb://127.0.0.1:27017/apiexpress
+LIVE_URL = 'mongodb+srv://himanshuojhabhd:Parthiv123@cluster0.bty0feo.mongodb.net/ApiEcommerce?retryWrites=true&w=majority'
